--- a/src/components/Category/Category.scss
+++ b/src/components/Category/Category.scss
@@ -19,4 +19,17 @@
         grid-template-columns: repeat(3,1fr);
         
     }
+    @media screen and (min-width:1200px) {
+        grid-template-columns: repeat(5,1fr);
+        
+    }
+    @media screen and (min-width:1400px) {
+        grid-template-columns: repeat(5,1fr);
+        
+    }
+}
+h3{
+    text-align: center;
+    margin-top: 30px;
+    margin-bottom: 40px;
 }
