--- a/src/App.scss
+++ b/src/App.scss
@@ -3,13 +3,13 @@
 // variables
 $clr-black: #000;
 $clr-white: #fff;
-$clr-regal-blue: #103755;
-$clr-gold: #eeb808;
+$clr-regal-blue: #4040ec;
+$clr-gold: #4040ec;
 $clr-light-blue: #707b8e;
 $clr-pine-green: #63766b;
 $clr-ghost-white: #f8f8fa;
 $clr-dark: #212529;
-$clr-red: #CE4F4B;
+$clr-red: #ff4040;
 $fnt-base: 'Poppins', sans-serif;
 $transition: all 300ms linear;
 
